--- a/flower-dapp/package.json
+++ b/flower-dapp/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@onflow/fcl": "^1.4.1",
+    "@onflow/types": "^1.1.0",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
