--- a/flower-dapp/package.json
+++ b/flower-dapp/package.json
@@ -22,7 +22,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zustand": "^4.4.5"
   },
   "devDependencies": {
     "daisyui": "^3.2.1"
